extra section added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </main>
     <section class="container">
-        <h3 class="text-center p-3">Bonus (Questions)</h3>
+        <h3 class="text-center p-3">Questions & Answears</h3>
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
